add apache sync, async

--- a/gateway/src/main/resources/config.yaml
+++ b/gateway/src/main/resources/config.yaml
@@ -1,5 +1,5 @@
 httpClient:
-  clientType: OKHTTP_ASYNC
+  clientType: APACHE_ASYNC
   maxConnection: 10
   keepAliveTime: 100
   connectTimeOut: 100
